@@ -248,7 +248,7 @@ void        job_change_goal           (Job *job, JobGoal goal);
 void        job_change_state          (Job *job, JobState state);
 JobState    job_next_state            (Job *job);
 
-void        job_run_process           (Job *job, ProcessType process);
+int         job_run_process           (Job *job, ProcessType process);
 void        job_kill_process          (Job *job, ProcessType process);
 
 void        job_child_handler         (void *ptr, pid_t pid,
