@@ -1,5 +1,12 @@
 2008-01-15  Scott James Remnant  <scott@netsplit.com>
 
+	* init/job.c (job_run_process): Change to return a value indicating
+	whether there's been a non-temporary error (always returns zero so
+	far).
+	* init/job.h: Update prototype.
+	* init/tests/test_job.c (test_run_process): Check that job_run_process
+	always returns zero.
+
 	* init/job.c (job_change_goal): Document in which states this function
 	has unexpected side-effects such as freeing the job, since we do
 	attempt to call it from within job_change_state().
